traingle draws